--- a/index.html
+++ b/index.html
@@ -6,5 +6,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="./css/cstyle.css" />
   </head>
-  <body></body>
+  <body>
+    <header>Заголовок сайта</header>
+  </body>
 </html>
